z-index fix

--- a/wp-content/themes/h22/assets/source/sass/components/_section.scss
+++ b/wp-content/themes/h22/assets/source/sass/components/_section.scss
@@ -72,7 +72,7 @@
   top: 0;
   left: 0;
 
-  z-index: 0;
+  z-index: $level-bottom !important;
 }
 
 
